refactor(systems): refactor and cleanup systems domain
- Global refactor with rename, code positions, ...
- Docs
- Code cleanup